Revert changes made which cause test failures.